tests/NormalTests/paczka1/fuzzy1/99839220.err
Error in line 2: riGlGOzr S270 48,1
Error in line 1: NW69BrJNp S957 92,8
Error in line 23: CdFzZ S270 14,21
Error in line 15: CdFzZ S270 86,4
Error in line 24: CdFzZ S39 46,2
Error in line 26: S957 S39 86,3
